--- a/deployment.yaml
+++ b/deployment.yaml
@@ -22,17 +22,17 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hello
+      app: Flask
   template:
     metadata:
       labels:
-        app: hello
+        app: Flask
     spec:
       containers:
       - name: timesheet
         # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
         # Replace $GCLOUD_PROJECT with your project ID.
-        image: $LOCATION-docker.pkg.dev/$GCLOUD_PROJECT/hello-repo/helloworld-gke:latest
+        image: $LOCATION-docker.pkg.dev/$GCLOUD_PROJECT/sbrepo/timesheet:latest
         # This app listens on port 8080 for web traffic by default.
         ports:
         - containerPort: 8080
